# TodoApp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_admin.py  test_auth.py  test_security.py  test_todos.py  test_user.py  utils.py
todo_api/: api.py  config.py  database.py  dependencies.py  models.py  schema.py  security.py
todo_api/routers/: admin.py  auth.py  todos.py  user.py
todo_client/: app.py
todo_client/pages/: admin.py  login.py  profile.py  todos.py
todo_client/utils/: api_client.py  config.py
