[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "A production-ready FastAPI backend with full CRUD operations and secure authentication, paired with a Streamlit client for interactive user management."
authors = ["thomas-bailly <thomas.bailly1698@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "todo_api"},
    {include = "todo_client"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
pydantic = {extras = ["email"], version = "^2.11.10"}
sqlalchemy = "^2.0.43"
python-multipart = "^0.0.20"
argon2-cffi = "^25.1.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
alembic = "^1.16.5"
streamlit = "^1.50.0"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"